--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "yup": "^1.2.0"
